--- a/caravan/index.html
+++ b/caravan/index.html
@@ -116,6 +116,19 @@ St.Augustine
             </section>
             </div>
           </div>
+<div class="pagination">
+<p><<</p>
+<p><</p>
+<P>1</P>
+<P>2</P>
+<p>3</p>
+<p>></p>
+<p>>></p>
+
+
+</div>
+
+
 </section>
 
 <div class="sidebar">
