--- a/caravan/index.html
+++ b/caravan/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/2e6ca6568e.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
   <title>CARAVAN</title>
 </head>
 <body>
@@ -14,6 +15,13 @@
   CARAVAN
 </a>
 </h1>
+<div class="social">
+
+  <i class="fab fa-facebook-square"></i>
+  <i class="fab fa-twitter-square"></i> 
+  <i class="fab fa-instagram"></i>
+
+</div>
  </header>
 
  <nav>
